# rh_cognitv_lite

./: .gitignore  .pypirc-template  Dockerfile.dev  README.md  build.sh  init.container.sh  package.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
examples/: index.py  index_dag.py  index_platform.py
rh_cognitv_lite/cognitive/: __init__.py  capabilities.py  context.py  execution_graph.py  nodes.py  registry.py  results.py  telemetry.py
rh_cognitv_lite/execution_platform/: README.md  __init__.py  __protocols.py  errors.py  event_bus.py  events.py  execution.py  execution_runners.py  models.py  types.py
rh_cognitv_lite/orchestrator/: _engine.py  dag.py  dag_builder.py  dag_visualizer.py  models.py
specs/: 00 - General.md  001 - execution_nodes_general_design.md  01 - execution_platform - sequence parallel execution.md  02 - orchestration - DAG.md  03 - Cog.md  03 - Memory.md  04 - Artifact.md  05 - Orch_spec.md  06 - graphs_refactor.md  07 - cognitive_layer_llm.md  07 - execution_nodes.md
tests/cognitive/: test_capabilities.py  test_context.py  test_execution_graph.py  test_for_each.py  test_llm_adapter.py  test_nodes.py  test_registry.py  test_telemetry.py
tests/execution_platform/: test_configs.py  test_execution_call.py  test_parallel_runner.py  test_retry_aware.py  test_sequence_runner.py
tests/orchestrator/: test_builder.py  test_dag.py  test_engine.py  test_models.py  test_visualizer.py
tests/orchestrators/: test_builder.py  test_dag.py  test_engine.py  test_models.py  test_visualizer.py
(+11 files in other folders)
